--- a/Index.html
+++ b/Index.html
@@ -21,12 +21,14 @@
     </header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand menu__nav" href="./index.html">Inicio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="./Index.html">Inicio</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link dropdown-toggle menu__nav" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Tecnología</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -103,8 +105,7 @@
         </div>
         </main>
         <section class="grid">
-        <div class="grid1">
-            <article class="nota__toscano">
+            <article class="nota__toscano" tabindex="1">
                 <img class="foto__toscano" src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="Foto Pablo Toscano">
                 <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
                     pasada</h1>
@@ -113,15 +114,13 @@
                     juegos
                     más importantes del 2018, el Assassin’s Creed Odyssey.</p>
             </article>
-            <article class="nota__gardel">
+            <article class="nota__gardel" tabindex="2">
                 <img class="foto__gardel" src="./imagenes/museo_casa_carlos_gardel_9.jpg" alt="Museo Casa Carlos Gardel">
                 <h2 class="titulo__gardel">La casa del tango</h2>
                 <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
                     reapertura.</p>
             </article>
-        </div>
-        <div class="grid2">
-            <article class="nota__arsenico">
+            <article class="nota__arsenico" tabindex="3">
                 <img class="foto__casares" src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
                     alt="Cartel Carlos Casares">
                 <h2 class="titulo__arsenico">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h2>
@@ -130,13 +129,12 @@
                     Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
                     tóxico.</p>
             </article>
-            <article class="nota__almagro">
+            <article class="nota__almagro" tabindex="4">
                 <img class="foto__gimnasio" src="./imagenes/Almagro.jpg" alt="gimnasio">
                 <h2 class="titulo__almagro">Almagro Boxing Club: una verdadera cuna de campeones</h2>
                 <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones,
                     tanto olímpicos como mundiales.</p>
             </article>
-        </div>
         </section>
     <div>
         <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./imagenes/Iconos/iconowhatsapp.png"
