--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -2,145 +2,155 @@
 <html lang="en">
 
 <head>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="¡Contactate con nosotros! Indie Post, un medio periodístico independiente.">
-        <meta name="keywords" content="Indie, periodismo, independiente, periodismo independiente, contacto, formulario, formulario de contacto">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <!-- <link rel="stylesheet" href="../css/Archivo.css"> -->
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/Normalize.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-        <link rel="icon" href="../imagenes/logo.png">
-        <title>Indie Post - Contacto</title>
-    </head>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Contactate con nosotros! Indie Post, un medio periodístico independiente.">
+    <meta name="keywords"
+      content="Indie, periodismo, independiente, periodismo independiente, contacto, formulario, formulario de contacto">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="../css/Archivo.css"> -->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/Normalize.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="../imagenes/logo.png">
+    <title>Indie Post - Contacto</title>
+  </head>
 </head>
 
 <body>
-    <header>
-      <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
-    </header>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
-                  <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
-              </li>
+  <header>
+    <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
+  </header>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
+              <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
             </ul>
-            <form class="d-flex barra__busqueda">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="boton__busqueda" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-    </nav>
-    <form class="formulario">
-            <h1>Contacto</h1>
-            <br>
-            <label for="name">Escriba su nombre</label>
-            <input type="text" name="name" placeholder="Escriba aquí" required>
-            <br>
-            <br>
-            <label for="Correo Electrónico">Correo Electrónico</label>
-            <input type="email" required>
-            <br>
-            <br>
-            <label for="text">Asunto</label>
-            <input type="text">
-            <br>
-            <br>
-            <textarea name="Consulta" id="Consulta" cols="100" rows="12" placeholder="Escriba su consulta aquí" required>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
+          </li>
+        </ul>
+        <form class="d-flex barra__busqueda">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="boton__busqueda" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <form class="formulario">
+    <h1>Contacto</h1>
+    <br>
+    <label for="name">Escriba su nombre</label>
+    <input type="text" name="name" placeholder="Escriba aquí" required>
+    <br>
+    <br>
+    <label for="Correo Electrónico">Correo Electrónico</label>
+    <input type="email" required>
+    <br>
+    <br>
+    <label for="text">Asunto</label>
+    <input type="text">
+    <br>
+    <br>
+    <textarea name="Consulta" id="Consulta" cols="100" rows="12" placeholder="Escriba su consulta aquí" required>
 
             </textarea>
-            <br>
-            <br> 
-            Provincia
-            <select name="Provincia" id="Provincia">
-                <option value="Buenos Aires">Buenos Aires</option>
-                <option value="Capital Federal">Capital Federal</option>
-                <option value="Catamarca">Catamarca</option>
-                <option value="Chaco">Chaco</option>
-                <option value="Chubut">Chubut</option>
-             <option value="Córdoba">Córdoba</option>
-             <option value="Corrientes">Corrientes</option>
-             <option value="Entre Rios">Entre Rios</option>
-             <option value="Formosa">Formosa</option>
-             <option value="Jujuy">Jujuy</option>
-             <option value="La Pampa">La Pampa</option>
-             <option value="La Rioja">La Rioja</option>
-             <option value="Mendoza">Mendoza</option>
-             <option value="Misiones">Misiones</option>
-             <option value="Neuquén">Neuquén</option>
-             <option value="Río Negro">Río Negro</option>
-             <option value="Salta">Salta</option>
-             <option value="San Juan">San Juan</option>
-             <option value="San Luis">San Luis</option>
-             <option value="Santa Cruz">Santa Cruz</option>
-             <option value="Santa Fe">Santa Fe</option>
-             <option value="Santiago del Estero">Santiago del Estero</option>
-             <option value="Tierra del Fuego">Tierra del Fuego</option>
-             <option value="Tucumán">Tucumán</option>
-            </select>
-            <br>
-            <br>
-            <h4>Género</h4>
-            <div class="checkbox">
-            <input type="checkbox" id="masculino"><label for="masculino">Masculino</label>
-            <input type="checkbox" id="femenino"><label for="femenino">Femenino</label>
-            <input type="checkbox" id="otro"><label for="otro">Otro</label>
-            <input type="checkbox" id="PrefieroNoDecirlo"><label for="PrefieroNoDecirlo">Prefiero no decirlo</label>
-            </div>
-            <br>
-            <br>
-            <div class="californiano">
-            <input type="submit" value="Enviar formulario">
-            <input type="reset" value="Limpiar formulario">
-            </div>
-        </form>
-        
-    <div>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
+    <br>
+    <br>
+    Provincia
+    <select name="Provincia" id="Provincia">
+      <option value="Buenos Aires">Buenos Aires</option>
+      <option value="Capital Federal">Capital Federal</option>
+      <option value="Catamarca">Catamarca</option>
+      <option value="Chaco">Chaco</option>
+      <option value="Chubut">Chubut</option>
+      <option value="Córdoba">Córdoba</option>
+      <option value="Corrientes">Corrientes</option>
+      <option value="Entre Rios">Entre Rios</option>
+      <option value="Formosa">Formosa</option>
+      <option value="Jujuy">Jujuy</option>
+      <option value="La Pampa">La Pampa</option>
+      <option value="La Rioja">La Rioja</option>
+      <option value="Mendoza">Mendoza</option>
+      <option value="Misiones">Misiones</option>
+      <option value="Neuquén">Neuquén</option>
+      <option value="Río Negro">Río Negro</option>
+      <option value="Salta">Salta</option>
+      <option value="San Juan">San Juan</option>
+      <option value="San Luis">San Luis</option>
+      <option value="Santa Cruz">Santa Cruz</option>
+      <option value="Santa Fe">Santa Fe</option>
+      <option value="Santiago del Estero">Santiago del Estero</option>
+      <option value="Tierra del Fuego">Tierra del Fuego</option>
+      <option value="Tucumán">Tucumán</option>
+    </select>
+    <br>
+    <br>
+    <h4>Género</h4>
+    <div class="checkbox">
+      <input type="checkbox" id="masculino"><label for="masculino">Masculino</label>
+      <input type="checkbox" id="femenino"><label for="femenino">Femenino</label>
+      <input type="checkbox" id="otro"><label for="otro">Otro</label>
+      <input type="checkbox" id="PrefieroNoDecirlo"><label for="PrefieroNoDecirlo">Prefiero no decirlo</label>
     </div>
-    <footer>
-      <div class="footloose">
+    <br>
+    <br>
+    <div class="californiano">
+      <input type="submit" value="Enviar formulario">
+      <input type="reset" value="Limpiar formulario">
+    </div>
+  </form>
+
+  <div>
+    <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png"
+        alt="IconoWhatsapp"></a>
+  </div>
+  <footer>
+    <div class="footloose">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
       odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
-      </div>
-      <div class="redes">
-          <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-                  src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
-          <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-                  src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
-          <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-                  src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
-      </div>
+    </div>
+    <div class="redes">
+      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+          src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+          src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+          src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+    </div>
   </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+    integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+    integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
