--- a/index.html
+++ b/index.html
@@ -116,40 +116,45 @@
     </div>
   </main>
   <section class="grid">
-    <article class="nota__toscano" tabindex="1">
-      <img class="nota__fotos" src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="Foto Pablo Toscano">
-      <h1 class="nota__titulos">Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la
-        década
-        pasada</h1>
-      <p class="nota__texto">Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
-        compañía Frima
-        Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los
-        juegos
-        más importantes del 2018, el Assassin’s Creed Odyssey.</p>
-    </article>
-    <article class="nota__gardel" tabindex="2">
-      <img class="nota__fotos" src="./imagenes/museo_casa_carlos_gardel_9.jpg" alt="Museo Casa Carlos Gardel">
-      <h2 class="nota__titulos">La casa del tango</h2>
-      <p class="nota__texto">Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
-        reapertura.</p>
-    </article>
-    <article class="nota__arsenico" tabindex="3">
-      <img class="nota__fotos" src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
-        alt="Cartel Carlos Casares">
-      <h2 class="nota__titulos">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h2>
-      <p class="nota__texto">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades
-        como Carlos
-        Casares y
-        Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
-        tóxico.</p>
-    </article>
-    <article class="nota__almagro" tabindex="4">
-      <img class="nota__fotos" src="./imagenes/Almagro.jpg" alt="gimnasio">
-      <h2 class="nota__titulos">Almagro Boxing Club: una verdadera cuna de campeones</h2>
-      <p class="nota__texto">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes
-        campeones,
-        tanto olímpicos como mundiales.</p>
-    </article>
+    <a href="./paginas/entrevista-toscano.html">
+      <div class="card nota__toscano">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
+            </h1>
+            <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+              compañía Frima
+              Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+              más importantes del 2018, el Assassin’s Creed Odyssey.</p>
+          </div>
+        </div>
+      </div>
+    </a>
+    <div class="card nota__gardel">
+      <div class="card-img-overlay">
+        <h2 class="card-text">La casa del tango</h2>
+        <p class="card-text">Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
+          reapertura.</p>
+      </div>
+    </div>
+    <div class="card nota__arsenico">
+      <div class="card-img-overlay">
+        <h1 class="card-text">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
+        <p class="card-text">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades
+          como Carlos
+          Casares y
+          Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
+          tóxico.</p>
+      </div>
+    </div>
+    <div class="card nota__boxeo">
+      <div class="card-img-overlay">
+        <h1 class="card-text">Almagro Boxing Club: una verdadera cuna de campeones</h1>
+        <p class="card-text">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes
+          campeones, tanto
+          olímpicos como mundiales.</p>
+      </div>
+    </div>
   </section>
   <div>
     <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./imagenes/Iconos/iconowhatsapp.png"
