--- a/paginas/tops.html
+++ b/paginas/tops.html
@@ -73,18 +73,24 @@
   </div>
   <footer>
     <div class="footloose">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
-      odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
+        <p>Indie Post, un medio creado por un periodista independiente.</p>
+        <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
-      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-          src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
-      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-          src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
-      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-          src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+        <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+                src="../imagenes/iconos/iconofacebook.png" alt="facebook">
+        </a>
+        <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+                src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
+        </a>
+        <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+                src="../imagenes/iconos/iconotwitter.png" alt="twitter">
+        </a>
+        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp"
+                src="../imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp">
+        </a>
     </div>
-  </footer>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
     crossorigin="anonymous"></script>
